[tool.poetry]
name = "ifed"
version = "0.10"
description = ""
authors = ["nikos <myrtakis@csd.uoc.gr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
captum = "0.6.0"
cleanlab = "2.4.0"
imageio = "2.31.2"
matplotlib = "3.6.2"
numpy = "1.23.5"
pandas = "1.5.2"
pillow = "10.0.0"
pkbar = "0.5"
ray = "2.6.1"
scikit-learn = "1.2.0"
torch = "1.13.1"
torchvision = "0.14.1"
tqdm = "4.64.1"
lightning = "^2.0.7"
foolbox = "^3.3.3"
numba = "^0.58.0"
isort = "^5.12.0"
black = "^23.9.1"
umap-learn = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
